# matplotlib_numpy_study

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature-proposal.md
notebooks/: algebra_notebook.ipynb
