[project]
name = "matplotlib_numpy_study"
version = "0.1.0"
description = "Artifacts from an independent study into algebra, statistics, and data visualization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
]
